# Dwell_Log_Analysis_DLL

./: CMakeLists.txt  README.md  main.cpp
helpers/: LoadCSV.cpp  LoadCSV.h
include/: actual_dwell_log.csv  predicted_dwell_log.csv  test_data.csv
src/: Analysis.cpp  Analysis.h  DwellLogData.cpp  DwellLogData.h
tests/: test_Data.cpp  test_logdata.cpp
